
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int type; char* name; } ;


 TYPE_1__* qtypelist ;

char *QType2Str(int qtype)
{
 int i = 0;

 while(qtypelist[i].type && qtypelist[i].type != qtype)
  i++;
 return(qtypelist[i].name);
}
